# playdot

./: .gitignore  README.md  docker-compose.yml  prompt.txt  pyproject.toml  pytest.ini  tasks.py
game_server/: asgi.py  settings.py  urls.py  wsgi.py
playdot/: __main__.py  apps.py  board.py  constants.py  consumers.py  game.py  models.py  routing.py  urls.py  utils.py  views.py
playdot/migrations/: 0001_initial.py  0002_auto_20210923_0257.py  0003_board_width.py  0004_rename_if_full_row_is_full.py  0005_auto_20210926_1844.py  0006_playdotgamedata.py  0007_rename_metadata_gamedata_meta.py  0008_alter_space_value.py  0009_alter_space_value.py  0010_auto_20210927_2151.py  0011_gamedata_winner.py  0012_auto_20210928_0334.py  0013_auto_20210929_2040.py  0014_gamedata_is_single_player.py
playdot/static/playdot/js/: board.js  index.js  room.js
playdot/templates/playdot/: board.html  index.html  room.html
tests/: test_core.py  test_game.py  test_utils.py  test_views.py
