[tool.poetry]
name = "playdot"
version = "0.1.0"
description = ""
authors = ["Dylan Wilson <dylanjw@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
invoke = "^1.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
