[tool.poetry]
name = "playdot"
version = "0.1.0"
description = ""
authors = ["Dylan Wilson <dylanjw@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
channels = "^3.0.4"
asgiref = "3.3.4"
channels-redis = "^3.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
invoke = "^1.6.0"
pylint = "^2.11.1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
